[package]
name = "cow2"
version = "0.2.2"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["no_std", "cow", "string", "str", "slice"]
categories = ["no-std", "rust-patterns"]
description = "Like Cow, but T is covariant"

license = "MIT"
repository = "https://github.com/A4-Tacks/cow2-rs"

readme = "README.md"

[features]
default = []
std = []

[dependencies]
