[package]
name = "cow2"
version = "0.2.6"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["no_std", "cow", "string", "str", "slice"]
categories = ["no-std", "rust-patterns"]
description = "Like Cow<B>, but B is covariant"

license = "MIT"
repository = "https://github.com/A4-Tacks/cow2-rs"

readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
std = []

[dependencies]
